--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </p>
     <p>15 February, 2025;
         <span>Contribution 01</span>
+        <span>Contribution 02</span>
     </p>
 </body>
 </html>
