--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>15 February, 2025;
         <span>Contribution 01</span>
         <span>Contribution 02</span>
+        <span>Contribution 03</span>
     </p>
 </body>
 </html>
