--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </p>
     <p>16 February, 2025;
       <span>Contribution 01</span>
+      <span>Contribution 02</span>
     </p>
 </body>
 </html>
