--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p>16 February, 2025;
       <span>Contribution 01</span>
       <span>Contribution 02</span>
+      <span>Contribution 03</span>
     </p>
 </body>
 </html>
