--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </p>
     <p>17 February, 2025;
       <span>Contribution 01</span>
+      <span>Contribution 02</span>
     </p>
 </body>
 </html>
