--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p>17 February, 2025;
       <span>Contribution 01</span>
       <span>Contribution 02</span>
+      <span>Contribution 03</span>
     </p>
 </body>
 </html>
