--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </p>
     <p>18 February, 2025;
       <span>Contribution 01</span>
+      <span>Contribution 02</span>
     </p>
 </body>
 </html>
