--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p>18 February, 2025;
       <span>Contribution 01</span>
       <span>Contribution 02</span>
+      <span>Contribution 03</span>
     </p>
 </body>
 </html>
