--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <span>Contribution 03</span>
       <span>Contribution 04</span>
       <span>Contribution 05</span>
+      <span>Contribution 06</span>
     </p>
 </body>
 </html>
