--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Keep Active</h1>
     <p>19 February, 2025;
       <span>Contribution 01</span>
+      <span>Contribution 02</span>
     </p>
     <p>18 February, 2025;
       <span>Contribution 01</span>
