--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>19 February, 2025;
       <span>Contribution 01</span>
       <span>Contribution 02</span>
+      <span>Contribution 03</span>
     </p>
     <p>18 February, 2025;
       <span>Contribution 01</span>
